# dart_ips

./: .gitignore  LICENSE  README.md
ips/: Makefile
ips/amalthea_pipe/: build.tcl  readme.md
ips/amalthea_prem/: build.tcl  readme.md
ips/amalthea_prem/hw/sim/: tb.sv
ips/amalthea_prem/sw/: CMakeLists.txt  Makefile
ips/amalthea_prem/sw/baremetal/: HWA-MM.h
ips/amalthea_prem/sw/src/: HWA-MM.c  main.c
ips/crc/: readme.md
ips/crc/hw/: build.tcl
ips/crc/hw/src/: crc.cpp  crc.hpp  crc_top.cpp  crc_top.hpp
ips/crc/hw/tb/: tb.cpp
ips/crc/sw/src/: crc.c
ips/fastx/: readme.md
ips/fastx/hw/: build.tcl
ips/fastx/hw/src/: fastx_top.cpp  fastx_top.hpp  hw_mod.cpp  hw_mod.hpp  img_stream.hpp
ips/fastx/hw/tb/: tb.cpp
ips/fastx/sw/src/: fastx.cpp
ips/finn/: readme.md
ips/finn/hw/: build.tcl
ips/finn/hw/src/: config.h  finn_top.cpp  finn_top.hpp  memdata-0.h  memdata-1.h  memdata-2.h  memdata-3.h  memdata-4.h  memdata-5.h  memdata-6.h  memdata-7.h  memdata-8.h  top.cpp  top.hpp
ips/finn/hw/src/bnn/: activations.hpp  weights.hpp
ips/finn/hw/src/old/: params_thresholds.hpp  params_weights.hpp
ips/finn/sw/src/: memcpy.c
ips/fir/: readme.md
ips/fir/hw/: build.tcl
ips/fir/hw/src/: fir.cpp  fir.hpp  fir_top.cpp  fir_top.hpp  tb.cpp
ips/fir/hw/tb/: tb.cpp
ips/fir/sw/: Makefile
ips/fir/sw/baremetal/: fir.c  fir.tcl  readme.md
ips/fir/sw/src/: fir.c
ips/gmap/: readme.md
ips/gmap/hw/: build.tcl
ips/gmap/hw/src/: data.hpp  gmap_top.cpp  gmap_top.hpp  hw_mod.cpp  hw_mod.hpp
ips/gmap/hw/tb/: tb.cpp
ips/gmap/sw/: CMakeLists.txt
ips/gmap/sw/src/: gmap.cpp
ips/lenet/: readme.md
ips/lenet/hw/: build.tcl
ips/lenet/hw/include/: LeNet.h  LeNet_AXIS.h-xxxx  lenet_fred.h  lenet_fred.hpp  lenet_top.h  parameters.h
ips/lenet/hw/src/: LeNet.cpp  LeNet_AXIS.cpp-xxxx  lenet_fred.cpp  lenet_top.cpp
ips/lenet/hw/tb/: tb.cpp
ips/lenet/sw/src/: lenet.cpp  parameters.h
ips/mat_mult/: build.tcl  readme.md
ips/mat_mult/hw/: build.tcl
ips/mat_mult/hw/src/: mat_mult.cpp  mat_mult.hpp  mat_mult_top.cpp  mat_mult_top.hpp
ips/mat_mult/hw/tb/: tb.cpp
ips/mat_mult/sw/src/: mat-mult.c
ips/memcp2/hw/: build.tcl
ips/memcp2/hw/src/: memcp2.cpp  memcp2.hpp  memcp2_top.cpp  memcp2_top.hpp  tb.cpp
ips/memcp2/sw/src/: memcp2.c
ips/memcpy/: readme.md
ips/memcpy/hw/: build.tcl
ips/memcpy/hw/src/: memcpy.cpp  memcpy.hpp  memcpy_top.cpp  memcpy_top.hpp
ips/memcpy/hw/tb/: tb.cpp
ips/memcpy/sw/: Makefile
ips/memcpy/sw/src/: memcpy.c
ips/mul_vec/: readme.md
ips/mul_vec/hw/: build.tcl
ips/mul_vec/hw/src/: hw_mod.cpp  hw_mod.hpp  hw_task.cpp  hw_task.hpp
ips/mul_vec/hw/tb/: tb.cpp
ips/mul_vec/sw/: Makefile
ips/mul_vec/sw/src/: mul.c  readme.md
ips/nor_vec/: readme.md
ips/nor_vec/hw/: build.tcl
ips/nor_vec/hw/src/: hw_mod.cpp  hw_mod.hpp  hw_task.cpp  hw_task.hpp
ips/nor_vec/hw/tb/: tb.cpp
ips/nor_vec/sw/: Makefile
ips/nor_vec/sw/src/: nor.c
ips/prem/: readme.md
ips/prem/hw/: build.tcl
ips/prem/hw/src/: prem.cpp  prem.hpp  prem_top.cpp  prem_top.hpp
ips/prem/hw/tb/: tb.cpp
ips/prem/sw/src/: prem.c
ips/prem_config/: parameters.hpp  readme.md
ips/prem_config/hw/: build.tcl
ips/prem_config/hw/src/: prem.cpp  prem.hpp  prem_config_top.cpp  prem_config_top.hpp  prem_top.cpp
ips/prem_config/hw/tb/: tb.cpp
ips/prem_config/sw/: Makefile
ips/prem_config/sw/src/: prem.c
ips/sobel/: readme.md
ips/sobel/hw/: build.tcl
ips/sobel/hw/src/: hw_mod.cpp  hw_mod.hpp  img_stream.hpp  sobel_top.hpp
ips/sobel/hw/tb/: tb.cpp
ips/sobel/sw/: CMakeLists.txt
ips/sobel/sw/src/: BMP.h  data.h  sobel.c  sobel.cpp  test_bmp.c
ips/sobel/sw/src/reference/: README.md
ips/sobel/sw/src/reference/src/: Makefile  main.c
ips/sobel_no_builtin/: readme.md
ips/sobel_no_builtin/hw/: build.tcl
ips/sobel_no_builtin/hw/src/: hw_mod.cpp  hw_mod.hpp  sobel_top.cpp  sobel_top.hpp
ips/sobel_no_builtin/hw/tb/: tb.cpp
ips/sobel_no_builtin/hw/tb/ref/: sobel.c
ips/sobel_no_builtin/hw/tb/ref_opt/: sobel.c
ips/sobel_no_builtin/sw/: CMakeLists.txt  Makefile  keepme
ips/sobel_no_builtin/sw/src/: sobel.c
ips/sub_vec/: readme.md
ips/sub_vec/hw/: build.tcl
ips/sub_vec/hw/src/: hw_mod.cpp  hw_mod.hpp  hw_task.cpp  hw_task.hpp
ips/sub_vec/hw/tb/: tb.cpp
ips/sub_vec/sw/: Makefile
ips/sub_vec/sw/src/: sub.c
ips/sum_vec/: readme.md
ips/sum_vec/hw/: build.tcl
ips/sum_vec/hw/src/: hw_mod.cpp  hw_mod.hpp  hw_task.cpp  hw_task.hpp
ips/sum_vec/hw/tb/: tb.cpp
ips/sum_vec/sw/: Makefile
ips/sum_vec/sw/src/: sum.c
ips/xor_vec/: readme.md
ips/xor_vec/hw/: build.tcl
ips/xor_vec/hw/src/: hw_mod.cpp  hw_mod.hpp  hw_task.cpp  hw_task.hpp
ips/xor_vec/hw/tb/: tb.cpp
ips/xor_vec/sw/: Makefile
ips/xor_vec/sw/src/: xor.c
scripts/: build.tcl  ip_hls.tcl  readme.md
static/1partition/: README.md  build.sh  build.tcl  readme.md
static/1partition/hw/bd/: design_1.tcl
static/2partition/: readme.md
static/2partition/hw/bd/: design_1.tcl
static/3partition/: readme.md
static/3partition/hw/bd/: design_3.tcl
static/3partition/hw/hdl/: amalthea_prem.vhd
static/scripts/: build.tcl
